# attention_calculations

./: .gitignore  Attention_results.txt  Attention_theory.txt  CMakeLists.txt  README.md  attention_computation_theory.txt  attention_ml_theory.txt
attention_calculations/: CMakeLists.txt  attention.cpp  attention.h  attention_vectorized.cpp  matmul_type.h  tensor.cpp  tensor.h
attention_calculations/include/: attention.h  matmul_type.h  random.h  tensor.h
attention_calculations/src/: attention.cpp  attention_calculations.cpp  attention_vectorized.cpp  main.cpp  random.cpp  tensor.cpp
attention_calculations/src/attention/: attention.cpp  cache_friendly_attention.cpp  cache_friendly_tiled_attention.cpp  flash_attention.cpp  naive_attention.cpp  tiled_attention.cpp  vectorized_attention.cpp
